# static-osm-indexer

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test_python.yml
examples/text_search/: index_search_demo.html
frontend/: package-lock.json  package.json  text_search.test.ts  text_search.ts
static_osm_indexer/: extract_road_network.py  generate_full_map.py  generate_mbtiles.py  helpers.py  index_locations_names.py  list_named_locations.py  road_network_to_geojson.py
static_osm_indexer/static_assets/: index.html  osm_liberty.json  text_search.bundle.js  tilemaker_config.json
tests/: conftest.py
tests/integration/: test_extract_names.py  test_full_indexing.py  test_mbtiles_generation.py
tests/static/: test_area.pbf
